--- a/app/src/main/res/layout/activity_worker_dashboard.xml
+++ b/app/src/main/res/layout/activity_worker_dashboard.xml
@@ -33,6 +33,7 @@
         <ImageView
             android:layout_width="28dp"
             android:layout_height="28dp"
+            android:src="@drawable/ic_power_button"
             android:paddingStart="5dp"
             android:tint="@color/colorPrimary"/>
         <TextView
